[project]
name = "stock-invest-scripts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "babel==2.18.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.14.3",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "cryptography==47.0.0",
    "curl-cffi==0.15.0",
    "delorean==1.0.0",
    "docopt==0.6.2",
    "frozendict==2.4.7",
    "getmac==0.9.5",
    "humanize==4.15.0",
    "idna==3.13",
    "jproperties==2.1.2",
    "lxml==6.1.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "multitasking==0.0.13",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "peewee==4.0.5",
    "platformdirs==4.9.6",
    "protobuf==7.34.1",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pytimeparse==1.1.8",
    "pytz==2026.1.post1",
    "requests==2.33.1",
    "rich==15.0.0",
    "rsa==4.9.1",
    "simplejson==4.1.1",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "stomp-py==8.2.0",
    "tigeropen==3.5.8",
    "twelvedata==1.3.0",
    "typing-extensions==4.15.0",
    "tzlocal==5.3.1",
    "urllib3==2.6.3",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "yfinance==1.3.0",
]
